# IotEdgeGateway

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-aarch64.sh  build.sh  compile_commands.json  start.sh
.pio_core/: appstate.json
.pio_core/.cache/downloads/: usage.db
.pio_core/.cache/http/: db.data
F411/: project.sct  project.uvguix.lenovo  project.uvoptx  project.uvprojx
F411/Hardware/: AHT30.c  AHT30.h  Buzzer.c  Buzzer.h  ESP8266.c  ESP8266.h  I2C.c  I2C.h  Infrared.c  Infrared.h  LED.c  LED.h  LightSensor.c  LightSensor.h  Motor.c  Motor.h  PWM.c  PWM.h  Servo.h  USART1_Model.c  USART1_Model.h  Zigbee.c  Zigbee.h
F411/Protocol/: cJSON.h  protocol.c  protocol.h
F411/System/: Delay.c  Delay.h
F411/User/: main.c  stm32f4xx_it.c
build-aarch64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-iotgw_qt_client-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwidget.h
build-iotgw_qt_client-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_mainwidget.cpp
cmake/: toolchain-aarch64.cmake  version.hpp.in
config/devices/: actuators.yaml  schema.yaml  sensors.yaml
config/environments/: development.yaml  production.yaml
config/rules/: alarm-rules.yaml  automation-rules.yaml
docs/: API接口文档.md  开发文档.md  视频模块移植说明.md  部署说明.md  阶段三开发文档.md  项目架构说明.md
esp32/stm32_mqtt_bridge/: platformio.ini
esp32/stm32_mqtt_bridge/src/: main.cpp
esp8266_mqtt_bridge/: platformio.ini
esp8266_mqtt_bridge/src/: main.cpp
qt_client/: .qmake.stash  Makefile  historywidget.cpp  historywidget.h  historywidget.ui  iotgw_qt_client  iotgw_qt_client.ini  iotgw_qt_client.pro  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  moc_mainwidget.cpp  moc_predefs.h  monitorwidget.cpp  monitorwidget.h  monitorwidget.ui  ui_mainwidget.h
scripts/: board_mqtt_setup.sh  package_iotgw.sh  run_board_gateway.sh
src/core/common/config/: config_manager.cpp  config_manager.hpp
src/core/common/logger/: file_logger.cpp  logger.hpp
src/core/common/utils/: json_utils.hpp  time_utils.hpp
src/core/control/: rule_engine.hpp
src/core/device/manager/: device_manager.hpp  device_registry.cpp
src/core/device/model/: device_entity.hpp  device_status.hpp
src/core/device/protocol_adapters/: adapter_base.hpp
src/core/device/protocol_adapters/mqtt_adapter/: mqtt_adapter.hpp  mqtt_client.cpp
src/core/device/protocol_adapters/zigbee_adapter/: zigbee_adapter.cpp  zigbee_adapter.hpp
src/core/storage/: sqlite_storage.cpp  sqlite_storage.hpp
src/gateway/: gateway_core.cpp  gateway_core.hpp  main.cpp
src/services/web_services/api/: camera_api.cpp  camera_api.hpp  device_api.cpp  device_api.hpp  rest_api.cpp  rest_api.hpp  rule_api.cpp  rule_api.hpp
src/services/web_services/websocket/: websocket_server.cpp  websocket_server.hpp
src/tools/mqtt_broker/: main.c
stm32/exam/: LED.c
www/: index.html
www/js/: hls.min.js
